@@ -368,7 +368,9 @@ void
 Waypoints::AddTempPoint(const GeoPoint& location, const double terrain_alt,
                         const char *name) noexcept
 {
-  assert(name != nullptr);
+  if (name == nullptr)
+    return;
+
   const bool is_takeoff = StringIsEqual(name, "(takeoff)");
 
   // remove old temporary waypoint first (only if it's a temporary one)
@@ -383,4 +385,14 @@ Waypoints::AddTempPoint(const GeoPoint& location, const double terrain_alt,
   }
 
   Optimise();
+}
+
+void
+Waypoints::EraseTempGoto() noexcept
+{
+  WaypointPtr old_goto = LookupName("(goto)");
+  if (old_goto != nullptr && old_goto->origin == WaypointOrigin::NONE) {
+    Erase(std::move(old_goto));
+    Optimise();
+  }
 }
